@@ -4,7 +4,7 @@
 use strict;
 
 #load test
-use Test::More tests => 71;
+use Test::More tests => 79;
 
 # load modules
 BEGIN {
@@ -30,16 +30,17 @@ my $address = "Los Alamos National Laboratory,\n" .
               "Los Alamos, NM 87545";
               
 my $document = $object->build( 
+     UseSTC => 1,
      Role => 'test',
      ID   => 'ivo://raptor.lanl/23456789/',
      Description => 'This is some human readable text.',
-     Who => { Publisher => 'ivo://raptor.lanl',
-                   Date => '2005-04-15T14:34:16',
-                   Contact => { Name => 'Robert White',
-                                Institution => 'LANL',
-                                Address => $address,
-                                Telephone => '+1-505-665-3025',
-                                Email => 'rwhite@lanl.gov' } },
+     Who => { AuthorIVORN => 'ivo://raptor.lanl',
+              Date => '2005-04-15T14:34:16',
+              Author => { ContactName => 'Robert White',
+                          ShortName => 'LANL',
+                          Contributor => $address,
+			  ContactEmail => 'rwhite@lanl.gov',
+                          ContactPhone => '+1-505-665-3025' }},
      Citations => [ { ID => 'ivo://raptor.lanl/98765432/', 
                       Cite => 'supercedes' },
                     { ID => 'ivo://estar.org/1234567/aa/', 
@@ -99,7 +100,7 @@ exit;
 __DATA__
 <?xml version="1.0" encoding="UTF-8"?>
 
-<VOEvent role="test" id="ivo://raptor.lanl/23456789/" version="HTN/0.2">
+<VOEvent role="test" ivorn="ivo://raptor.lanl/23456789/" version="1.1x" xmlns="http://www.ivoa.net/xml/VOEvent/v1.1" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.ivoa.net/xml/VOEvent/v1.1 http://www.ivoa.net/xml/VOEvent/VOEvent-v1.1.xsd">
     <Description>This is some human readable text.</Description>
     <Who>
         <AuthorIVORN>ivo://raptor.lanl</AuthorIVORN>
@@ -110,8 +111,8 @@ PO Box 1663,
 ISR-1, MS B244,
 Los Alamos, NM 87545</contributor>
             <contactName>Robert White</contactName>
-            <contactPhone>+1-505-665-3025</contactPhone>
             <contactEmail>rwhite@lanl.gov</contactEmail>
+            <contactPhone>+1-505-665-3025</contactPhone>
         </Author>
         <Date>2005-04-15T14:34:16</Date>
     </Who>
@@ -119,21 +120,29 @@ Los Alamos, NM 87545</contributor>
         <EventIVORN cite="supercedes">ivo://raptor.lanl/98765432/</EventIVORN>
         <EventIVORN cite="associated">ivo://estar.org/1234567/aa/</EventIVORN>
     </Citations>
-    <WhereWhen type="simple">
-        <RA units="deg">
-            <Coord>148.888</Coord>
-            <Error value="4" units="arcmin" />
-        </RA>
-        <Dec units="deg">
-            <Coord>69.065</Coord>
-            <Error value="4" units="arcmin" />
-        </Dec>
-        <Epoch value="J2000.0" />
-        <Equinox value="2000.0" />
-        <Time>
-            <Value>2005-04-15T23:59:59</Value>
-            <Error value="30" units="s" />
-        </Time>
+    <WhereWhen>
+        <ObsDataLocation xmlns="http://www.ivoa.net/xml/STC/stc-v1.30.xsd" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <ObservatoryLocation id="GEOLUN" xlink:type="simple" xlink:href="ivo://STClib/Observatories#GEOLUN">
+                <ObservationLocation>
+                    <AstroCoordSystem id="UTC-FKC-GEO" xlink:type="simple" xlink:href="ivo://STClib/CoordSys#UTC-FK5-GEO/">
+                        <AstroCoords coord_system_id="UTC-FK5-GEO">
+                            <Time unit="s">
+                                <TimeInstant>
+                                    <ISOTime>2005-04-15T23:59:59</ISOTime>
+                                </TimeInstant>
+                            </Time>
+                            <Position2D unit="deg">
+                                <Value2>
+                                    <C1>148.888</C1>
+                                    <C2>69.065</C2>
+                                </Value2>
+                                <Error2Radius>4</Error2Radius>
+                            </Position2D>
+                        </AstroCoords>
+                    </AstroCoordSystem>
+                </ObservationLocation>
+            </ObservatoryLocation>
+        </ObsDataLocation>
     </WhereWhen>
     <How>
         <Instrument>
